--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
             
             <footer>
                 <div id="tweet">
-                    <h1>My last tweet</h1>
+                    <h1>My twwets</h1>
                     <p>Hee-haw!</p>
                     <p>12/05 23:12</p>
+		    <br />
+		    <p>Yeeha</p>
+		    <p>12/04 22:30.</p>
                 </div>
 				<div id="my_pictures">
                     <h1>My images</h1>
